--- a/BlogApp/package.json
+++ b/BlogApp/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "regenerator-runtime": "^0.14.0",
     "vite": "^5.0.2",
