--- a/BlogApp-Redux/package.json
+++ b/BlogApp-Redux/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "regenerator-runtime": "^0.14.0",
     "vite": "^5.0.2",
