--- a/BlogApp-ReactQuery/package.json
+++ b/BlogApp-ReactQuery/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.3",
+    "bootstrap": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
